Fix dlnaprofile and scheduledtask popup dialoge on small screen

--- a/src/components/dialogHelper/dialoghelper.css
+++ b/src/components/dialogHelper/dialoghelper.css
@@ -123,9 +123,33 @@
         margin: 0 !important;
         box-shadow: none;
     }
+
+    .dialog-medium {
+        top: 5% !important;
+        left: 0 !important;
+        right: 0 !important;
+    }
+
+    .popupDialogContent{
+        padding-top: 5em;
+    }
 }
 
 @media all and (min-width: 80em) and (min-height: 45em) {
+    .dialog-medium {
+        position: fixed !important;
+        top: 7.5% !important;
+        bottom: 0 !important;
+        left: 20% !important;
+        right: 20% !important;
+        margin: 0 !important;
+        box-shadow: none;
+    }
+
+    .popupDialogContent{
+        padding-top: 3.5em;
+    }
+
     .dialog-small {
         width: 60%;
         height: 80%;
